Fix: Stretch
Stretch scroll was not working when the number of items matched the container

--- a/ch5-button-list/scss/_button-list-stretch.scss
+++ b/ch5-button-list/scss/_button-list-stretch.scss
@@ -29,7 +29,7 @@ ch5-button-list {
       }
     }
 
-    &.ch5-button-list--scrollbar-false {
+    &.ch5-button-list--stretch-button-container-width {
 
       &.ch5-button-list--stretch-width,
       &.ch5-button-list--stretch-both {
